export const snapshot = {};

snapshot[`Project Update Command - Help Text 1`] = `
stdout:
"
Usage: update <projectId>

Description:

  Update a Linear project                                                         
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                             - Show this help.                                                                  
  -n, --name              <name>         - Project name                                                                     
  -d, --description       <description>  - Project description (max 255 characters, enforced by Linear's API)               
  -f, --description-file  <path>         - Read project description from file (still subject to the 255-character API       
                                           limit)                                                                           
  --content               <markdown>     - Project overview markdown                                                        
  --content-file          <path>         - Read project overview markdown from a file                                       
  -s, --status            <status>       - Status (planned, started, paused, completed, canceled, backlog)                  
  -l, --lead              <lead>         - Project lead (username, email, or @me). Use --clear-lead to remove it            
  --clear-lead                           - Remove the project's lead (cannot be combined with --lead)                       
  --start-date            <startDate>    - Start date (YYYY-MM-DD). Use --clear-start-date to remove it                     
  --clear-start-date                     - Remove the project's start date (cannot be combined with --start-date)           
  --target-date           <targetDate>   - Target date (YYYY-MM-DD). Use --clear-target-date to remove it                   
  --clear-target-date                    - Remove the project's target date (cannot be combined with --target-date)         
  -t, --team              <team>         - Team key, name, or ID; replaces the project's entire team set. May be repeated.  
                                           Use --add-team/--remove-team to change teams incrementally.                      
  --add-team              <team>         - Add a team to the project, keeping its existing teams. May be repeated.          
  --remove-team           <team>         - Remove a team from the project, keeping its other teams. May be repeated.        
  --label                 <label>        - Project label; replaces the project's entire label set. May be repeated. Use     
                                           --add-label/--remove-label to change labels incrementally.                       
  --add-label             <label>        - Add a label to the project, keeping its existing labels. May be repeated.        
  --remove-label          <label>        - Remove a label from the project, keeping its other labels (does not delete the   
                                           label). May be repeated.                                                         
  --initiative            <initiative>   - Initiative ID, slug, or name; replaces the project's entire initiative set. May  
                                           be repeated. Use --add-initiative/--remove-initiative to change initiatives      
                                           incrementally.                                                                   
  --add-initiative        <initiative>   - Add the project to an initiative, keeping its existing initiatives. May be       
                                           repeated.                                                                        
  --remove-initiative     <initiative>   - Remove the project from an initiative, keeping its other initiatives (does not   
                                           delete the initiative). May be repeated.                                         

"
stderr:
""
`;

snapshot[`Project Update Command - Update Name 1`] = `
stdout:
"✓ Updated project: Updated Project Name
https://linear.app/test/project/updated-proj
"
stderr:
""
`;

snapshot[`Project Update Command - Update Description 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-desc
"
stderr:
""
`;

snapshot[`Project Update Command - Update Status 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-status
"
stderr:
""
`;

snapshot[`Project Update Command - Replace Labels 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-labels
"
stderr:
""
`;

snapshot[`Project Update Command - Update Content 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-content
"
stderr:
""
`;

snapshot[`Project Update Command - Update Content File 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-content
"
stderr:
""
`;

snapshot[`Project Update Command - Update Description And Content 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-content
"
stderr:
""
`;

snapshot[`Project Update Command - Empty Content File Sends Empty String 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-content
"
stderr:
""
`;

snapshot[`Project Update Command - Add Team Sends Full Team Set 1`] = `
stdout:
"✓ Updated project: Triad Project
https://linear.app/test/project/triad
"
stderr:
""
`;

snapshot[`Project Update Command - Replace Initiatives Creates And Deletes Links 1`] = `
stdout:
"✓ Updated project: Triad Project
https://linear.app/test/project/triad
"
stderr:
""
`;

snapshot[`Project Update Command - Team And Add Team Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update project: Cannot combine --team with --add-team or --remove-team
  --team replaces the project's entire team set. Use it alone to set the exact set, or use --add-team/--remove-team alone to change it incrementally.
"
`;

snapshot[`Project Update Command - Label And Remove Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update project: Cannot combine --label with --add-label or --remove-label
  --label replaces the project's entire label set. Use it alone to set the exact set, or use --add-label/--remove-label alone to change it incrementally.
"
`;

snapshot[`Project Update Command - Initiative And Add Initiative Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update project: Cannot combine --initiative with --add-initiative or --remove-initiative
  --initiative replaces the project's entire initiative set. Use it alone to set the exact set, or use --add-initiative/--remove-initiative alone to change it incrementally.
"
`;
